aggiunto ServerController, ampliato Logger, aggiunti comandi eseguibili da vista, modificato server da sottoclasse di Thread ad implementatore di Runnable