@@ -7,15 +7,31 @@ repositories {
     mavenCentral()
 }
 
+// Metodo per determinare la piattaforma
+static def getPlatform() {
+    def osName = System.getProperty("os.name").toLowerCase()
+    if (osName.contains("win")) return "win"
+    if (osName.contains("mac")) return "mac"
+    return "linux"
+}
+
+def javafxVersion = '19.0.2'
+
 dependencies {
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
-    // Dipendenze specifiche del modulo Server
-    // ad esempio, se usa Client internamente:
-    // implementation project(':Client')
+
+    implementation "org.openjfx:javafx-base:${javafxVersion}:${getPlatform()}"
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:${getPlatform()}"
+    implementation "org.openjfx:javafx-fxml:${javafxVersion}:${getPlatform()}"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:${getPlatform()}"
+}
+
+application {
+    mainClass = 'ServerMain'
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ['--enable-preview', '-Xlint:-preview']
+    options.compilerArgs += '--enable-preview'
 }
 
 tasks.withType(Test).configureEach {
@@ -24,11 +40,11 @@ tasks.withType(Test).configureEach {
 }
 
 tasks.withType(JavaExec).configureEach {
-    jvmArgs += '--enable-preview'
-}
-
-application {
-    mainClass = 'ServerMain'
+    jvmArgs += [
+            '--enable-preview',
+            "--module-path", configurations.runtimeClasspath.asPath,
+            "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
+    ]
 }
 
 java {
